<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jocimar_paulo.ifsp.boletofacil.ActServicos"
    android:background="@color/greenbackground"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnServicosAmb"
        android:id="@+id/btnServicosAmb"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:textSize="8pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnServicosVisa"
        android:id="@+id/btnServicosVisa"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="8pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnServicosObra"
        android:id="@+id/btnServicosObra"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="8pt" />
</LinearLayout>
