<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GeraBoleto"
    android:weightSum="1"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imvLogo"
            android:layout_row="0"
            android:layout_column="0"
            android:src="@drawable/logo_itau"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="530dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtCodBarras"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#dddddd"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:editable="false"
            android:elegantTextHeight="false" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblCedente"
            android:id="@+id/lblCedente"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblNossoNum"
            android:id="@+id/lblNossoNum"
            android:layout_row="0"
            android:layout_column="1" />

        <EditText
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtCedente"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#dddddd"
            android:editable="false"
            android:elegantTextHeight="false" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtNossoNum"
            android:layout_row="2"
            android:layout_column="1"
            android:background="#dddddd"
            android:editable="false"
            android:elegantTextHeight="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblSacado"
            android:id="@+id/lblSacado"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblVencto"
            android:id="@+id/lblVencto"
            android:layout_row="3"
            android:layout_column="1" />

        <EditText
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtSacado"
            android:layout_row="4"
            android:layout_column="0"
            android:background="#dddddd"
            android:editable="false"
            android:elegantTextHeight="false" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtVencto"
            android:layout_row="4"
            android:layout_column="1"
            android:background="#dddddd"
            android:editable="false"
            android:elegantTextHeight="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblObs"
            android:id="@+id/lblObs"
            android:layout_row="5"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblValor"
            android:id="@+id/lblValor"
            android:layout_row="5"
            android:layout_column="1" />

        <EditText
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edtObs"
            android:layout_row="6"
            android:layout_column="0"
            android:background="#dddddd"
            android:textSize="10dp"
            android:editable="false"
            android:elegantTextHeight="false" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edtValor"
            android:layout_row="6"
            android:layout_column="1"
            android:background="#dddddd"
            android:editable="false"
            android:elegantTextHeight="false" />

        <ImageView
            android:layout_width="390dp"
            android:layout_height="60dp"
            android:id="@+id/imgCodBarras"
            android:layout_row="8"
            android:layout_column="0"
            android:src="@drawable/barcode"
            android:layout_marginTop="3dp" />

    </GridLayout>


</LinearLayout>
